tests/tests/failing_examples/not_fn.stderr
error: custom attribute panicked
 --> $DIR/not_fn.rs:3:1
  |
3 | #[hoist_temporaries]
  | ^^^^^^^^^^^^^^^^^^^^
  |
  = help: message: Failed to parse function: expected `fn`
