tests/tests/failing_examples/not_fn.rs
use hoist_temporaries::hoist_temporaries;

#[hoist_temporaries]
const x: u8 = 123;

fn main() {}
